--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
 
-    <title>Vikas Singh | PortFolio</title>
+    <title>Premjeet Sahu | PortFolio</title>
   </head>
   <body>
     <!--===== HEADER =====-->
@@ -63,7 +63,7 @@
       <section class="home bd-grid" id="home">
         <div class="home__data">
           <h1 class="home__title">
-            Hi,<br />I'am <span class="home__title-color">Vikas</span><br />
+            Hi,<br />I'am <span class="home__title-color">Premjeet</span><br />
             Software Developer
           </h1>
 
@@ -114,7 +114,7 @@
                 class="home__blob-img"
                 x="50"
                 y="80"
-                href="assets/img/profile.png"
+                href="assets/img/ProfileImage-removebg.png"
               />
             </g>
           </svg>
