--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <i class="bx bxl-linkedin"></i>
           </a>
           <a
-            href="https://leetcode.com/vikas0807/"
+            href="https://leetcode.com/Premjeet1804//"
             class="home__social-icon"
             title="LeetCode"
           >
@@ -131,12 +131,18 @@
           </div>
 
           <div>
-            <h2 class="about__subtitle">I'am Vikas Singh</h2>
+            <h2 class="about__subtitle">I'am Premjeet Sahu</h2>
             <p class="about__text">
-              Enthusiastic and detail-oriented Computer Science graduate with a
-              strong foundation in Java, PHP, and web technologies. Experienced
-              in full-stack development and software engineering through
-              impactful internships.
+              As a Computer Science Engineering student with a strong passion
+              for programming, I have a strong understanding of data structures
+              and algorithms, and I am proficient in .NET technologies such as
+              [.Net Core RestAPI ,Wpf and WinForms]. I have gained hands-on
+              experience working on various projects during my internship. In
+              addition to my technical skills, I am a strong communicator and
+              collaborator who is able to work effectively both independently
+              and as part of a team. I have a strong work ethic and a dedication
+              to delivering high-quality work that meets or exceeds
+              expectations.
             </p>
           </div>
         </div>
@@ -440,8 +446,8 @@
     <!--===== FOOTER =====-->
     <footer class="footer">
       <div class="footer__title">
-        <p>Vikas Singh</p>
-        <button class="footer__email">singhvk0807@gmail.com</button>
+        <p>Premjeet Sahu</p>
+        <button class="footer__email">premjeetsahu254@gmail.com</button>
       </div>
       <div class="footer__social">
         <a
