--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
 
         <div class="home__social">
           <a
-            href="https://www.linkedin.com/in/vikas-singh-64a977226/"
+            href="https://www.linkedin.com/in/premjeet-sahu-9a6958228/"
             class="home__social-icon"
             title="linkedin"
           >
             <i class="bx bxl-linkedin"></i>
           </a>
           <a
-            href="https://leetcode.com/Premjeet1804//"
+            href="https://leetcode.com/Premjeet1804/"
             class="home__social-icon"
             title="LeetCode"
           >
@@ -87,6 +87,21 @@
           </a>
           <a
             href="https://github.com/vikas020807"
+            class="home__social-icon"
+            title="GitHub"
+          >
+            <i class="bx bxl-github"></i>
+          </a>
+
+          <a
+            href="https://twitter.com/why_Premjeet"
+            class="home__social-icon"
+            title="GitHub"
+          >
+            <i class="bx bxl-github"></i>
+          </a>
+          <a
+            href="https://www.codechef.com/users/premjeet1804"
             class="home__social-icon"
             title="GitHub"
           >
@@ -157,14 +172,14 @@
             <h2 class="skills__subtitle">Profesional Skills</h2>
             <p class="skills__text">
               Skilled and knowledgeable Computer Science graduate with expertise
-              in Java, PHP, and web technologies. Proven experience in
+              in Java, C#, React.js and .Net technologies. Proven experience in
               full-stack development and software engineering through successful
               internships.
             </p>
             <div class="skills__data">
               <div class="skills__names">
-                <i class="bx bxl-php skills__icon"></i>
-                <span class="skills__name">Laravel PHP</span>
+                <i class="bx bxl-react skills__icon"></i>
+                <span class="skills__name">C# .Net</span>
               </div>
               <div class="skills__bar skills__intermediate"></div>
               <div><span class="skills__percentage">Intermediate</span></div>
@@ -182,7 +197,7 @@
             <div class="skills__data">
               <div class="skills__names">
                 <i class="bx bxs-data skills__icon"></i>
-                <span class="skills__name">MySQL</span>
+                <span class="skills__name">Sql-Server</span>
               </div>
               <div class="skills__bar skills__intermediate"></div>
               <div><span class="skills__percentage">Intermediate</span></div>
@@ -219,6 +234,16 @@
               <div class="skills__names">
                 <i class="bx bxl-javascript skills__icon"></i>
                 <span class="skills__name">JAVASCRIPT</span>
+              </div>
+              <div class="skills__bar skills__intermediate"></div>
+              <div>
+                <span class="skills__percentage">Intermediate</span>
+              </div>
+            </div>
+            <div class="skills__data">
+              <div class="skills__names">
+                <i class="bx bxl-react skills__icon"></i>
+                <span class="skills__name">REACT.JS</span>
               </div>
               <div class="skills__bar skills__intermediate"></div>
               <div>
@@ -264,7 +289,7 @@
                 aria-controls="panel-1"
                 class="experience__tab-button"
               >
-                <span>Persistent Systems</span>
+                <span>DigitalOcean</span>
               </button>
             </div>
 
@@ -299,37 +324,36 @@
                 <ul>
                   <li>
                     <p>
-                      &cir; &nbsp; Contributions to E-commerce Application:
-                      Played a pivotal role in building APIs for the frontend of
-                      an e-commerce application.
+                      &cir; &nbsp; Learned Microsoft .Net Technologies and
+                      actively contributed to real-world projects.
                     </p>
                   </li>
                   <li>
                     <p>
-                      &cir; &nbsp; Admin Panel Design and Implementation:
-                      Developed an intuitive admin panel for the backend,
-                      ensuring seamless platform management.
+                      &cir; &nbsp; Collaborated in initiating and planning
+                      projects from scratch, understanding requirements, and
+                      contributing to project management processes.
                     </p>
                   </li>
                   <li>
                     <p>
-                      &cir; &nbsp; Technology Stack: Worked extensively with the
-                      Laravel framework, utilizing Livewire and Blade template
-                      engine in MVC architecture.
+                      &cir; &nbsp; Developed robust Rest APIs for backend
+                      operations using .Net, EntityFrameWork Linq and
+                      Sql-Server.
                     </p>
                   </li>
                   <li>
                     <p>
-                      &cir; &nbsp; Cross-functional Collaboration: Collaborated
-                      with cross-functional teams and maintained essential
-                      documentation.
+                      &cir; &nbsp; Contributed to designing highly responsive
+                      UI/UX in WindowsForm and WPF using XAML, enhancing user
+                      interaction and experience.
                     </p>
                   </li>
                   <li>
                     <p>
-                      &cir; &nbsp; Loan Service Facilitator Platform: Actively
-                      contributed to the development of 'GPS Pariwaar', a robust
-                      loan service facilitator platform.
+                      &cir; &nbsp; Utilized Git for version control and actively
+                      participated in Agile-based teamwork, fostering
+                      collaboration among team members.
                     </p>
                   </li>
                   <li>
@@ -370,14 +394,14 @@
               class="experience__tab-panel"
             >
               <h3>
-                <span>Summer Intern</span
+                <span>Open-Source Contributor</span
                 ><span class="company"
                   >&nbsp;@&nbsp;<a
                     href="https://www.persistent.com"
                     class="inline-link"
                     rel="noopener noreferrer"
                     target="_blank"
-                    >Persistent Systems Ltd.</a
+                    >Hacktoberfest</a
                   ></span
                 >
               </h3>
@@ -386,9 +410,20 @@
                 <ul>
                   <li>
                     <p>
-                      &cir; &nbsp; Knowledge Acquisition: Gained valuable
-                      knowledge in data structures, databases, Linux, and Java
-                      during the internship.
+                      &cir; &nbsp;Contributed to various OpenSource projects at
+                      Hacktoberfest 2022
+                    </p>
+                  </li>
+                  <li>
+                    <p>
+                      &cir; &nbsp; Make the necessary changes or additions to
+                      the codebase based on the javaScript related issues.
+                    </p>
+                  </li>
+                  <li>
+                    <p>
+                      &cir; &nbsp; Some contributions like adding data to JSON
+                      object | writing documentation | Designing also done.
                     </p>
                   </li>
                 </ul>
